# General

./: GTdiscord_bot.py  GTgoogle_translate.py  GTmorse_translator.py  GTtts.py  GTyt_downloader.py  README.md  discord_bot.py  google_translate.py  tts.py
C# (Unity Engine scripts)/Tanks 2D/: Readme.md
C# (Unity Engine scripts)/Tanks 2D/Scripts/: AvatarSwitch.cs  Bullet.cs  CameraFollow.cs  Crosshair.cs  FirePointAngle.cs  Movement.cs  ParallaxBackground.cs  (+7 more)
C++ projects/Boost.Asio Echo TCP Server-Client/: Client.cpp  Readme.md  Server.cpp
C++ projects/Calculator/: Calculator.cpp  Calculator.h
C++ projects/Journal/: CMakeLists.txt  LICENSE.md  Readme.md
C++ projects/Journal/libs/: LICENSE_sha256.txt
C++ projects/Journal/src/: Registration.h  User.cpp  UserList.cpp  hash_password.cpp
C++ projects/LoginSystem/: loginSystem.cpp
C++ projects/Misc/: Readme.md  casino.cpp
C++ projects/Monty Hall Paradox/: LICENSE.md  README.md
C++ projects/ToDo app/: Readme.md  functions.cpp  functions.h  main.cpp  task.cpp  task.h
Games/tanks/: Assembly-CSharp.csproj  Readme.md  tanks.sln
Interview Kit/: FizzBuzz.py  bubbleSort.py  quickSort.py
Journal/libs/: sha256.cpp  sqlite3.lib
Journal/src/: Date.cpp  Login.cpp  Login.h  Registration.cpp  User.h  UserList.h  main.cpp
python projects/: morse_translator.py  yt_downloader.py
python projects/Currency Converter/: converter.py
python projects/Expenses Tracker/: expenses_tracker.py
python projects/Misc/: bubbleSort.py  fizzBuzz.py  quickSort.py
python projects/youtube_player/: yt.py
youtube_player/: main.py
(+50 files in other folders)
